Fix alignment of supernumber controls

--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -64,7 +64,8 @@ dl
         font-family: Helvetica, Arial, sans-serif
         position: absolute
         z-index: 1
-        width: 100%
+        left: 0
+        right: 0
         height: 30px
         font-weight: 200
         text-align: center
